# DynamicKeyActionFramework

./: CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
src/: ActionManager.cpp  ActionManager.h  Globals.cpp  Globals.h  Hooks.cpp  Hooks.h  InputWatcher.cpp  InputWatcher.h  JSONParser.cpp  JSONParser.h  Main.cpp  MenuWatcher.cpp  MenuWatcher.h  Utils.cpp  Utils.h
